# DoubleSpeak

./: README.md
pcs2022-main/doublespeak/: README.md  pyproject.toml
pcs2022-main/doublespeak/config/: main.yaml
pcs2022-main/doublespeak/config/notebooks/: notebook.yaml
pcs2022-main/doublespeak/notebooks/: eda1.ipynb
