[tool.poetry]
name = "doublespeak"
version = "0.1.0"
description = ""
authors = ["Atharva Shirke"]

[tool.poetry.dependencies]
python = "^3.8"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
notebook = "^6.4.10"
pre-commit = "^2.19.0"
pandas = "^1.5.1"
geojson = "^2.5.0"
geopandas = "^0.12.1"
folium = "^0.13.0"
matplotlib = "^3.6.2"
scikit-learn = "^1.1.3"
mapclassify = "^2.4.3"
rtree = "^1.0.1"
pyproj = "^3.4.0"
shapely = "^1.8.5.post1"
sklearn = "^0.0.post1"
pygeos = "^0.13"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
